syntax = "proto3";

package authority.v1;


option go_package = "authority-rpc/api/authority/v1;v1";

service authority {
  // 菜单
  rpc MenuList (MenuListReq) returns (MenuListResp) {}
  rpc CreateMenu (CreateMenuReq) returns (CreateMenuResp) {}
  rpc UpdateMenu (UpdateMenuReq) returns (UpdateMenuResp) {}
  rpc DeleteMenu (DeleteMenuReq) returns (DeleteMenuResp) {}
  rpc DetailMenu (DetailMenuReq) returns (DetailMenuResp) {}

  // 角色
  rpc RoleList (RoleListReq) returns (RoleListResp) {}
  rpc CreateRole (CreateRoleReq) returns (CreateRoleResp) {}
  rpc UpdateRole (UpdateRoleReq) returns (UpdateRoleResp) {}
  rpc DeleteRole (DeleteRoleReq) returns (DeleteRoleResp) {}

  // 角色关联菜单
  rpc RoleMenuList (RoleMenuListReq) returns (RoleMenuListResp) {}
  rpc UpdateRoleMenu (UpdateRoleMenuReq) returns (UpdateRoleMenuResp) {}
}

message MenuListReq {
  string title = 1;
}

message MenuInfo {
  int64 id = 1;
  int64 parentId = 2;
  string title = 3;
  string icon = 4;
  string path = 5;
  string permission = 8; // 权限标识
  int32 type = 9;     // 类型：0菜单 1节点
  string method = 10;     // 请求方式
  int32 status = 11;     // 状态：1正常 2禁用
  int32 hide = 12;   // 是否可见：1是 2否
  string note = 13;   // 备注
  int32 sort = 14;     // 显示顺序
  int64 createUser = 15; // 添加人
  int64 createTime = 16; // 创建时间
  int64 updateUser = 17;  // 更新人
  int64 updateTime = 18;  // 更新时间
}

message MenuListResp {
  repeated MenuInfo list = 1;
}

message CreateMenuReq {
  int64 parentId = 1;
  string title = 2;
  string icon = 3;
  string path = 4;
  string permission = 7;
  int32 type = 8;
  int32 status = 9;
  int32 hide = 10;
  string note = 11;
  int32 sort = 12;
  repeated int64 checkedList = 13;
}

message CreateMenuResp {
  int64 id =1;
}

message UpdateMenuReq {
  int64 id=14;
  int64 parentId = 1;
  string title = 2;
  string icon = 3;
  string path = 4;

  string permission = 7;
  int32 type = 8;
  int32 status = 9;
  int32 hide = 10;
  string note = 11;
  int32 sort = 12;
  repeated int64 checkedList = 13;
}

message UpdateMenuResp {
  int64 id =1;
}

message DeleteMenuReq {
  int64 id =1;
}

message DeleteMenuResp {

}

message DetailMenuReq {
  int64 id =1;
}

message DetailMenuResp {
    MenuInfo info=1;
}

message RoleListReq {
  string name = 1;
}

message RoleListResp {
  repeated RoleInfo list = 1;
}


message RoleInfo {

  int64 id = 1;
  string name = 2;
  string code = 3;
  string note = 4;
  int32 sort = 5;
  int32 status = 6;     // 状态：1正常 2停用
  int64 createUser = 7; // 添加人
  int64 createTime = 8; // 添加时间
  int64 updateUser = 9; // 更新人
  int64 updateTime = 10; // 更新时间

}

message CreateRoleReq {
  string name = 1;
  string code = 2;
  int32 status = 3;
  int32 sort = 4;
  string note = 5;
}

message CreateRoleResp {
  int64 id =1;
}

message UpdateRoleReq {
  int64 id = 1;
  string name = 2;
  string code = 3;
  int32 status = 4;
  int32 sort = 5;
  string note = 6;
}

message UpdateRoleResp {
  int64 id =1;
}

message DeleteRoleReq {
  int64 id = 1;
}

message DeleteRoleResp {

}

message RoleMenuListReq {
  string roleId = 1;
}

message RoleMenuListResp {
  int64 id = 1;
  string title = 2;
  int64 parentId = 3;
  bool checked = 4;
  bool open = 5;
}

message UpdateRoleMenuReq {
  int64 roleId = 1;
  repeated int64 menuIds = 2;
}

message UpdateRoleMenuResp {

}